--- a/index.html
+++ b/index.html
@@ -3,19 +3,27 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link href="https://fonts.googleapis.com/css?family=Poiret+One|Ubuntu:300,400|Work+Sans:100" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="styleSheets/indexStyles.css">
 	<title>Jordan Neeb - Freelance Web Development</title>
 </head>
 <body>
-<div id="nav">
+<section id="main">
+	<h1>
+		<span id="first" class="name">JordΔ​‌n</span>
+		<span id="title">Front-End Web Developer</span>
+		<span id="last" class="name">N<span id="one8T">Ξ​‌</span>eb</span>
+		<span id="deskTitle">Front-End Web Developer</span>
+	</h1>
+</section>
+<section id="nav">
 	<ul>
 		<li><a href="#about">About</a></li>
+		<li class="slash">/</li>
 		<li><a href="#work">Work</a></li>
+		<li class="slash">/</li>
 		<li><a href="#contact">Contact</a></li>
 	</ul>
-</div>
-<div id="main">
-	<h1>Jordan Neeb</h1>
-</div>
+</section>
 </body>
 </html>
