--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<h1>
 		<span id="first" class="name">JordΔ​‌n</span>
 		<span id="title">Front-End Web Developer</span>
-		<span id="last" class="name">N<span id="one8T">Ξ​‌</span>eb</span>
+		<span id="last" class="name">NΞ​‌eb</span>
 		<span id="deskTitle">Front-End Web Developer</span>
 	</h1>
 </section>
