--- a/index.html
+++ b/index.html
@@ -3,27 +3,53 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link href="https://fonts.googleapis.com/css?family=Poiret+One|Ubuntu:300,400|Work+Sans:100" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Poiret+One|Ubuntu:300,400|Work+Sans:200|Alfa+Slab+One" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="styleSheets/indexStyles.css">
 	<title>Jordan Neeb - Freelance Web Development</title>
 </head>
 <body>
-<section id="main">
-	<h1>
-		<span id="first" class="name">JordΔ​‌n</span>
-		<span id="title">Front-End Web Developer</span>
-		<span id="last" class="name">NΞ​‌eb</span>
-		<span id="deskTitle">Front-End Web Developer</span>
-	</h1>
+<section id="landing">
+	<div id="main">
+		<h1>
+			<span id="first" class="name">JordΔ​‌n</span>
+			<span id="title">Front-End Web Developer</span>
+			<span id="last" class="name">NΞ​‌eb</span>
+		</h1>
+	</div>
+	<div id="nav">
+		<ul>
+			<li><a href="#about">About</a></li>
+			<li class="slash">/</li>
+			<li><a href="#work">Work</a></li>
+			<li class="slash">/</li>
+			<li><a href="#contact">Contact</a></li>
+		</ul>
+	</div>
 </section>
-<section id="nav">
-	<ul>
-		<li><a href="#about">About</a></li>
-		<li class="slash">/</li>
-		<li><a href="#work">Work</a></li>
-		<li class="slash">/</li>
-		<li><a href="#contact">Contact</a></li>
-	</ul>
+<section id="about">
+	<div class="pageTitle">
+		<h1>About</h1>
+		<div id="blurb">
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			<div id="aboutNav">
+				<ul>
+					<li><a href="#about">About</a></li>
+					<li class="slash">/</li>
+					<li><a href="#work">Work</a></li>
+					<li class="slash">/</li>
+					<li><a href="#contact">Contact</a></li>
+				</ul>
+			</div>
+		</div>
+	</div>
+</section>
+<section id="contact">
+	
 </section>
 </body>
 </html>
