started contact form

--- a/index.html
+++ b/index.html
@@ -49,7 +49,12 @@
 	</div>
 </section>
 <section id="contact">
-	
+	<form>
+		<input id="message" type="text" name="message" placeholder="Message"><br>
+		<input id="userName" type="text" name="name" placeholder="Name"><br>
+		<input id="phone" type="text" name="phone" placeholder="Phone (optional)"><br>
+		<input id="email" type="text" name="email" placeholder="Email">
+	</form>
 </section>
 </body>
 </html>
