fixed contact form bug

--- a/index.html
+++ b/index.html
@@ -49,13 +49,16 @@
 	</div>
 </section>
 <section id="contact">
-	<form>
-		<input id="userName" type="text" name="name" placeholder="Your Name" tabindex="1">
+	<form id="form">
+		<input id="userName" type="text" name="name" placeholder="Your Name" tabindex="1" autofocus="autofocus">
 		<input id="phone" type="text" name="phone" placeholder="Phone #" tabindex="2">
 		<input id="ext" type="text" name="ext" placeholder="Ext." tabindex="3">
 		<input id="email" type="text" name="email" placeholder="Email" tabindex="4">
 		<textarea id="message" type="text" name="message" placeholder="Message" tabindex="5"></textarea>
 	</form>
+	<div id="prev">
+		<p id="preview"></p>
+	</div>
 </section>
 <script type="text/javascript" src="scripts/next.js"></script>
 </body>
