--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
 		<input id="ext" type="text" name="ext" placeholder="Ext." tabindex="3">
 		<input id="email" type="text" name="email" placeholder="Email" tabindex="4">
 		<textarea id="message" type="text" name="message" placeholder="Message" tabindex="5"></textarea>
+		<div id="part"></div>
 	</form>
 	<div id="prev">
 		<p id="preview"></p>
