focus on link click

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			<li class="slash">/</li>
 			<li><a href="#work" tabindex="-1">Work</a></li>
 			<li class="slash">/</li>
-			<li><a id="cLink" href="#contact" tabindex="-1">Contact</a></li>
+			<li><a class="cLink" href="#contact" tabindex="-1">Contact</a></li>
 		</ul>
 	</div>
 </section>
@@ -42,7 +42,7 @@
 					<li class="slash">/</li>
 					<li><a href="#work" tabindex="-1">Work</a></li>
 					<li class="slash">/</li>
-					<li><a href="#contact" tabindex="-1">Contact</a></li>
+					<li><a class="cLink" href="#contact" tabindex="-1">Contact</a></li>
 				</ul>
 			</div>
 		</div>
