--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			<li class="slash">/</li>
 			<li><a href="#work" tabindex="-1">Work</a></li>
 			<li class="slash">/</li>
-			<li><a class="cLink" href="#contact" tabindex="-1">Contact</a></li>
+			<li><a href="#contact" tabindex="-1">Contact</a></li>
 		</ul>
 	</div>
 </section>
@@ -42,7 +42,7 @@
 					<li class="slash">/</li>
 					<li><a href="#work" tabindex="-1">Work</a></li>
 					<li class="slash">/</li>
-					<li><a class="cLink" href="#contact" tabindex="-1">Contact</a></li>
+					<li><a href="#contact" tabindex="-1">Contact</a></li>
 				</ul>
 			</div>
 		</div>
@@ -50,7 +50,7 @@
 </section>
 <section id="contact">
 	<form id="form">
-		<input id="userName" type="text" name="name" placeholder="Your Name" tabindex="1" autofocus="autofocus">
+		<input id="userName" type="text" name="name" placeholder="Your Name" tabindex="1">
 		<input id="phone" type="text" name="phone" placeholder="Phone #" tabindex="2">
 		<input id="ext" type="text" name="ext" placeholder="Ext." tabindex="3">
 		<input id="email" type="text" name="email" placeholder="Email" tabindex="4">
@@ -61,6 +61,6 @@
 		<p id="preview"></p>
 	</div>
 </section>
-<script type="text/javascript" src="scripts/next.js"></script>
+<script type="text/javascript" src="scripts/contact.js"></script>
 </body>
 </html>
