--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
 		<input id="email" type="text" name="email" placeholder="Email" tabindex="4">
 		<textarea id="message" type="text" name="message" placeholder="Message" tabindex="5"></textarea>
 		<div id="part"></div>
+		<button id="done">Done</button>
 	</form>
 	<div id="prev">
 		<p id="preview"></p>
