--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </section>
 <section id="about">
 	<div class="pageTitle">
-		<h1>About</h1>
+		<h2>About</h2>
 		<div id="blurb">
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -55,7 +55,9 @@
 		<input id="ext" type="text" name="ext" placeholder="Ext." tabindex="3">
 		<input id="email" type="text" name="email" placeholder="Email" tabindex="4">
 		<textarea id="message" type="text" name="message" placeholder="Message" tabindex="5"></textarea>
-		<div id="part"></div>
+		<div id="part">
+
+		</div>
 		<button id="done">Done</button>
 	</form>
 	<div id="prev">
