--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <section id="landing">
 	<div id="main">
 		<h1>
-			<span id="first" class="name">JordΔ​‌n</span>
+			<span id="first" class="name">Jord<span class="deltaXi">Δ</span>​‌n</span>
 			<span id="title">Front-End Web Developer</span>
-			<span id="last" class="name">NΞ​‌eb</span>
+			<span id="last" class="name">N<span class="deltaXi">Ξ</span>​‌eb</span>
 		</h1>
 	</div>
 	<div id="nav">
