--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </section>
 <section id="about">
 	<div class="pageTitle">
-		<h2>About</h2>
+		<h2 id="aHead">About</h2>
 		<div id="blurb">
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -56,7 +56,7 @@
 		<input id="email" type="text" name="email" placeholder="Email" tabindex="4">
 		<textarea id="message" type="text" name="message" placeholder="Message" tabindex="5"></textarea>
 		<div id="part">
-
+			<h2 id="cHead">What's Up?</h2>
 		</div>
 		<button id="done">Done</button>
 	</form>
