cHead line-height

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 		<input id="email" type="text" name="email" placeholder="Email" tabindex="4">
 		<textarea id="message" type="text" name="message" placeholder="Message" tabindex="5"></textarea>
 		<div id="part">
-			<h2 id="cHead">What's Up?</h2>
+			<h2 id="cHead">What's<br> Up?</h2>
 		</div>
 		<button id="done">Done</button>
 	</form>
