--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="https://fonts.googleapis.com/css?family=Poiret+One|Ubuntu:300,400|Work+Sans:200|Alfa+Slab+One" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="styleSheets/indexStyles.css">
-	<title>Jordan Neeb - Freelance Web Development</title>
+	<title>Jordan Neeb - Freelance Web Developer</title>
 </head>
 <body>
 <section id="landing">
@@ -56,9 +56,25 @@
 		<input id="email" type="text" name="email" placeholder="Email" tabindex="4">
 		<textarea id="message" type="text" name="message" placeholder="Message" tabindex="5"></textarea>
 		<div id="part">
-			<h2 id="cHead">What's<br> Up?</h2>
+			<svg enable-background="new 0 0 32 32" height="32px" id="back" version="1.1" viewBox="0 0 32 32" width="32px" xml:space="preserve" 
+			xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+			<g>
+				<polyline fill="none" points="   649,137.999 675,137.999 675,155.999 661,155.999  " stroke="#242424" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" stroke-width="2"/>
+				<polyline fill="none" points="   653,155.999 649,155.999 649,141.999  " stroke="#242424" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" stroke-width="2"/>
+				<polyline fill="none" points="   661,156 653,162 653,156  " stroke="#242424" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" stroke-width="2"/>
+			</g>
+			<g>
+				<g>
+					<path d="M29.018,17H2.982c-0.397,0-0.756-0.244-0.908-0.617c-0.152-0.374-0.068-0.804,0.213-1.09l11.789-12    c0.384-0.391,1.005-0.391,1.389,0s0.384,1.023,0,1.414L5.354,15h23.663C29.561,15,30,15.448,30,16S29.561,17,29.018,17z"/>
+				</g>
+				<g>
+					<path d="M14.772,29c-0.251,0-0.503-0.098-0.695-0.293l-7.86-8c-0.384-0.391-0.384-1.023,0-1.414s1.005-0.391,1.389,0l7.86,8    c0.384,0.391,0.384,1.023,0,1.414C15.275,28.902,15.023,29,14.772,29z"/>
+				</g>
+			</g>
+			</svg>
+			<h2 id="cHead">What's<br>Up?</h2>
 		</div>
-		<button id="done">Done</button>
+		<button id="done">Submit</button>
 	</form>
 	<div id="prev">
 		<p id="preview"></p>
