--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
+	<meta name="robots" content="noindex">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="https://fonts.googleapis.com/css?family=Poiret+One|Ubuntu:300,400|Work+Sans:200|Alfa+Slab+One" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="styleSheets/indexStyles.css">
-	<title>Jordan Neeb - Freelance Web Developer</title>
+	<title>Jordan Neeb | Toronto Web Developer</title>
 </head>
 <body>
 <section id="landing">
@@ -36,15 +37,15 @@
 			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-			<div id="aboutNav">
-				<ul>
-					<li><a href="#about" tabindex="-1">About</a></li>
-					<li class="slash">/</li>
-					<li><a href="#work" tabindex="-1">Work</a></li>
-					<li class="slash">/</li>
-					<li><a href="#contact" tabindex="-1">Contact</a></li>
-				</ul>
-			</div>
+		</div>
+		<div id="aboutNav">
+			<ul>
+				<li><a href="#landing" tabindex="-1">Home</a></li>
+				<li class="slash">/</li>
+				<li><a href="#work" tabindex="-1">Work</a></li>
+				<li class="slash">/</li>
+				<li><a href="#contact" tabindex="-1">Contact</a></li>
+			</ul>
 		</div>
 	</div>
 </section>
@@ -56,12 +57,12 @@
 		<input id="email" type="text" name="email" placeholder="Email" tabindex="4">
 		<textarea id="message" type="text" name="message" placeholder="Message" tabindex="5"></textarea>
 		<div id="part">
-			<svg enable-background="new 0 0 32 32" height="32px" id="back" version="1.1" viewBox="0 0 32 32" width="32px" xml:space="preserve" 
+			<svg enable-background="new 0 0 32 32" height="38px" id="back" version="1.1" viewBox="0 0 32 32" width="38px" xml:space="preserve" 
 			xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
 			<g>
-				<polyline fill="none" points="   649,137.999 675,137.999 675,155.999 661,155.999  " stroke="#242424" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" stroke-width="2"/>
-				<polyline fill="none" points="   653,155.999 649,155.999 649,141.999  " stroke="#242424" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" stroke-width="2"/>
-				<polyline fill="none" points="   661,156 653,162 653,156  " stroke="#242424" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" stroke-width="2"/>
+				<polyline fill="none" points="   649,137.999 675,137.999 675,155.999 661,155.999  " stroke="#262626" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" stroke-width="2"/>
+				<polyline fill="none" points="   653,155.999 649,155.999 649,141.999  " stroke="#262626" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" stroke-width="2"/>
+				<polyline fill="none" points="   661,156 653,162 653,156  " stroke="#262626" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" stroke-width="2"/>
 			</g>
 			<g>
 				<g>
