fixed multiple verify in contact - about 1/2 styled

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<span id="last" class="name">N<span class="deltaXi">Ξ</span>​‌eb</span>
 		</h1>
 	</div>
-	<div id="nav">
+	<div id="mainNav" class="nav">
 		<ul>
 			<li><a href="#about" tabindex="-1">About</a></li>
 			<li class="slash">/</li>
@@ -30,23 +30,23 @@
 <section id="about">
 	<div class="pageTitle">
 		<h2 id="aHead">About</h2>
-		<div id="blurb">
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-		</div>
-		<div id="aboutNav">
-			<ul>
-				<li><a href="#landing" tabindex="-1">Home</a></li>
-				<li class="slash">/</li>
-				<li><a href="#work" tabindex="-1">Work</a></li>
-				<li class="slash">/</li>
-				<li><a href="#contact" tabindex="-1">Contact</a></li>
-			</ul>
-		</div>
+	</div>
+	<div id="blurb">
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+	</div>
+	<div id="aboutNav" class="nav">
+		<ul>
+			<li><a href="#landing" tabindex="-1">Home</a></li>
+			<li class="slash">/</li>
+			<li><a href="#work" tabindex="-1">Work</a></li>
+			<li class="slash">/</li>
+			<li><a href="#contact" tabindex="-1">Contact</a></li>
+		</ul>
 	</div>
 </section>
 <section id="contact">
