milestone: mobile portrait

--- a/index.html
+++ b/index.html
@@ -10,10 +10,17 @@
 </head>
 <body>
 <div id="goodBurger">
-	<span></span>
-	<span></span>
-	<span></span>
-	<span></span>
+	<span id="span1"></span>
+	<span id="span2"></span>
+	<span id="span3"></span>
+	<span id="span4"></span>
+</div>
+<div id="mobileNav">
+	<ul>
+		<li><a href="#about">About</a></li>
+		<li><a href="#work">Work</a></li>
+		<li><a href="#contact">Contact</a></li>
+	</ul>
 </div>
 <section id="landing">
 	<div id="main">
@@ -81,5 +88,6 @@
 	</div>
 </section>
 <script type="text/javascript" src="scripts/contact.js"></script>
+<script type="text/javascript" src="scripts/burger.js"></script>
 </body>
 </html>
